#
#    Copyright 2008, 2009 Keith Reynolds.
#
#    This file is part of RPC++.
#
#    RPC++ is free software: you can redistribute it and/or
#    modify it under the terms of the GNU Lesser General Public
#    License as published by the Free Software Foundation,
#    either version 2.1 of the License, or (at your option) any
#    later version.
#
#    RPC++ is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty
#    of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#    See the GNU Lesser General Public License for more details.
#
#    You should have received a copy of the GNU Lesser General
#    Public License along with RPC++.  If not, see
#    <http://www.gnu.org/licenses/>.
#
noinst_PROGRAMS	= test1c test1s

test1c_SOURCES	= test1c.cpp
test1c_LDADD	= $(top_srcdir)/lib/librpcxx.la

test1s_SOURCES	= test1s.cpp
test1s_LDADD	= $(top_srcdir)/lib/librpcxx.la
